# wiki-notebook

./: .env.example  .gitignore  .pre-commit-config.yaml  2026-04-16-095649-this-session-is-being-continued-from-a-previous-c.txt  A11Y_QUICK_START.md  ACCESSIBILITY.md  AUDIT_CATEGORIZATION.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  QUICKSTART_DEPLOYMENT.md  README.md  RELEASE_NOTES.md  TESTING_CHECKLIST.md  handoff.md  playwright.cfg  pyproject.toml  pytest.ini
.github/: wiki-notebook.service
.github/workflows/: release.yml
.remember/: now.md
docs/: CATEGORIZATION.md  DEPLOYMENT.md  PRODUCTION_CHECKLIST.md  README.md  architecture.md  development.md  installation.md  keyboard-shortcuts.md  overview.md  tech-stack.md
docs/api/: reference.md  schema.md
docs/guides/: troubleshooting.md
docs/reference/: overview.md
scripts/: init_db.py  install.sh  package.sh  rebuild_fts.py  release.sh  run_ui_tests.sh  ship.sh
static/: a11y.js  app.js  index.html  styles.css
systemd/: wiki-notebook.service
tests/: __init__.py  conftest.py  test_categorize.py  test_chunking.py  test_combine.py  test_config_categories.py  test_enrichment_worker.py  test_error_handling.py  test_health.py  test_html_import_e2e.py  test_html_utils.py  test_import.py  test_notes_crud.py  test_ollama_client.py  test_optimize.py  test_search.py  test_validation.py
wiki_notebook/: __init__.py  __main__.py  app.py  chunking.py  config.py  config_categories.py  db.py  html_utils.py  models.py  repository.py  schema.sql  search.py  validation.py
(+20 files in other folders)
